# sead_compare

./: .gitignore  Makefile  pyproject.toml
src/data_diff/: config.py  data_differ.py  differ
src/pg_diff/: compare_columns.py  generate_options.py
src/pg_diff/templates/: options.jinja2
tests/: options_test.py
